tests/src/frontend/typechecking/invalid/bind_dot5.sk
class Foo() {
  fun method(Int): void {
    void
  }
}

fun main(): void {
  foo = Foo();
  fakeMethod: Int -> void = (_ -> void);
  !foo.method = fakeMethod;
  print_raw("Fail")
}
